# self

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  eef_and_env_model.xml  env.yml  get_dataset_info.py  pyproject.toml  setup.py  test.py  使用.md  问题.md
demo_aug/: __init__.py  aug_datastructures.py  demo.py  generate.py  generate_2.py  generate_2_close_loop.py  generate_2_global_delta.py  generate_new.py  generate_robot.py  generate_robot_not_reset_near_but_fix.py
demo_aug/annotators/: constraints.py  segmentation_masks.py
demo_aug/augmentor/: augmentor.py
demo_aug/configs/: base_config.py  env_configs.py  robot_configs.py
demo_aug/envs/: base_env.py  demo_aug_env.py  nerf_3d_trace_env.py  nerf_robomimic_env.py  sphere_nerf_env.py
demo_aug/hardware/: robot.py
demo_aug/models/: package.xml
demo_aug/objects/: base_object.py  nerf_object.py  reconstructor.py  robot_object.py
demo_aug/prompt_templates/: constraint-timestep-functions.md  constraint.md
demo_aug/utils/: camera_utils.py  cameras.py  composite.py  constraint_segmentation.py  data_collection_utils.py  demo_segmentation_utils.py  drake_utils.py  file_utils.py  fm_utils.py  logging_utils.py  mathutils.py  mujoco_utils.py  nerf_obj.py  nerfstudio_obj.py  obj.py  obj_utils.py  rays.py  robomimic_utils.py  run_script_utils.py  segmentation_utils.py  snopt_utils.py  viz_utils.py  xml_utils.py
demo_aug/visual_matching/: dinov3_semantic_match.py  dinov3_semantic_match2.py  pixel.py  semantic_tracker.py
models/franka_panda_polymetis_real_world/: panda_arm.urdf  panda_arm.xml  (+1 more)
scripts/: README.md  convert_dae_to_obj_blender.sh  convex_decomp.py  create_stl_mesh.py  dataset_states_to_obs.py  dataset_states_to_obs_with_privilege.py  extract_constraints.py  fill_robomimic_dataset_object_poses.py  generate_aug.py  generate_camera_info_from_robomimic.py  generate_dataset.py  generate_images_from_robomimic.py  launch_gen_augs_merge_train.sh  launch_generate_aug.sh  launch_nerfstudio_export.sh  launch_segment_images.sh  make_watertight.py  merge_demo_hdf5s.py  merge_mp4s_to_collage.py  modify_h5.py  playback_aug_demos_from_hdf5_v2.py  playback_dataset.py  playback_dataset_w_noise.py  playback_dataset_w_noise_mp.py  playback_demonstrations_from_hdf5.py  png_to_mp4.py  robomimic_playback.py  segment-demo.py  segment_images.py  upload_to_hf.py  viser-viz.py
(+192 files in other folders)
